<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity"
    >

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"

        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="@dimen/logo_width_size"
            android:layout_height="@dimen/logo_height_size"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/logo_margin_bottom"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:background="@drawable/valeo_label"
            android:contentDescription="@string/app_name"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_email_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/LoginTextInput"
            app:errorTextAppearance="@style/ErrorText">

            <EditText
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:text="@string/initial_email"
                android:textSize="@dimen/fragment_login_text_size"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/LoginTextInput"
            app:errorTextAppearance="@style/ErrorText"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:text="@string/initial_password"
                android:textSize="@dimen/fragment_login_text_size"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            style="@style/button_login_text"
            android:text="@string/button_login"/>

        <TextView
            android:id="@+id/text_forgot_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_login_text_margin"
            android:text="@string/text_forgot_password"
            android:textSize="@dimen/fragment_login_text_size"
            android:textColor="@color/colorLightGrey"
            android:typeface="normal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/fragment_login_text_margin"
        android:paddingBottom="@dimen/activity_login_bottom_padding"
        android:text="@string/text_sign_up"
        android:textSize="@dimen/fragment_login_text_size"
        android:typeface="normal"/>

</LinearLayout>